# infinite-video-fall-2023

./: README.md
01_intro/: 01-notes.md  manifesto.txt
02_basics/: 01-downloading-video.md  02-ffmpeg.md
03_language/: 01_loops.md  02_videogrep.md
04_coding_video/: 01-python.md  02-moviepy.md  overlay.py  shuffle_video.py
05_detection/: 01_ffmpeg_and_python.md  02_shot_detection.md  03_captioning_and_labeling.md  caption_shots.py  extract_objects.py  label_shots.py  search_scenes.py  shuffle_scenes.py
06_classification/: 01-functions-modules.md  02-custom-classifiers.md  custom_classifier_image.py  custom_classifier_video.py  download_images.py  object_extractor.py  shots.py  supercut_from_classifer.py  visualgrep.py
07_motion/: 01_command_line_apps.md  cutclip.py  video_grid_audio.html  vids2.json
07_publishing/: 01_command_line_apps.md  interactive_video_grid_audio.html  video_grid.html  video_grid_audio.html  videos.txt  vids.json
07_publishing/cutclip/: README.md  cutclip.py  pyproject.toml
08_motion_and_segmentation/: live_motion.py  motion_tracker.py  segment.py  segment_video.py
09_faces/: face_on.py  webcam.py
